# hwinfo-

./: .gitattributes  .gitignore  CHANGELOG.md  HardwareToad.sln  HardwareToad_Guide.docx  README.md  build_all.bat  dev.bat  hardware_toad.spec  hwinfo_monitor.spec  installer.iss  main.py  obfuscar.xml  requirements.txt  stress_worker.py  version.json
.tools/obfuscar/.store/obfuscar.globaltool/2.2.50/: project.assets.json
.tools/obfuscar/.store/obfuscar.globaltool/2.2.50/obfuscar.globaltool/2.2.50/: .nupkg.metadata  .signature.p7s  Obfuscar.GlobalTool.nuspec  obfuscar.globaltool.2.2.50.nupkg.sha512
.tools/obfuscar/.store/obfuscar.globaltool/2.2.50/obfuscar.globaltool/2.2.50/tools/net10.0/any/: GlobalTools.deps.json
.tools/obfuscar/.store/obfuscar.globaltool/2.2.50/obfuscar.globaltool/2.2.50/tools/net8.0/any/: DotnetToolSettings.xml  GlobalTools.deps.json
.tools/obfuscar/.store/obfuscar.globaltool/2.2.50/obfuscar.globaltool/2.2.50/tools/net9.0/any/: GlobalTools.deps.json
GPUStress/: CMakeLists.txt  dx12_engine.cpp  dx12_engine.h  main.cpp
GPUStress/shaders/: stress_compute.hlsl  stress_pixel.hlsl  stress_vertex.hlsl
LHMBridge/: LHMBridge.cs  LHMBridge.csproj  MchbarIO.amx  MchbarIO.p  MemoryTimings_PawnIO.cs  PawnIO.cs  SuperIO_PawnIO.cs  app.manifest  runtimeconfig.template.json
LHMBridge/include/: pawnio.inc
core/: __init__.py  app.py  bridge.py  constants.py  formatting.py  paths.py  stress_manager.py  stress_native.c  stress_worker.py  system_info.py
